--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         font-family: Courier, serif;
       }
       a:link, a:visited, a:active {
-        color: #F87572;
+        color: #333;
         text-decoration: none;
       }
       a:hover { text-decoration: underline; }
@@ -58,7 +58,7 @@
     </div>
     <div id="subtext">This past week I...</div>
     <ul id="lifestream"></ul>
-    <script src="/javascripts/party.min.js" type="text/javascript"></script>
+    <script src="/javascripts/party.js" type="text/javascript"></script>
     <script src="/javascripts/timeago.min.js" type="text/javascript"></script>
     <script src="/javascripts/lifestream.min.js" type="text/javascript"></script>
   </body>
