--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     </div>
     <div id="subtext">This past week I...</div>
     <ul id="lifestream"></ul>
-    <script src="/javascripts/party.js" type="text/javascript"></script>
+    <script src="/javascripts/party.min.js" type="text/javascript"></script>
     <script src="/javascripts/timeago.min.js" type="text/javascript"></script>
     <script src="/javascripts/lifestream.min.js" type="text/javascript"></script>
   </body>
