--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <style>
       body {
         margin: 0 20px;
@@ -13,7 +14,7 @@
         line-height: 24px;
         color: #999;
         background: #fff;
-        font-family: Courier, serif;
+        font-family: 'Roboto Mono', monospace;
       }
       a:link, a:visited, a:active {
         color: #333;
