--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <style>
-      @font-face {
-        font-family: 'Roboto Mono';
-        font-style: normal;
-        font-weight: 400;
-        src: url('/fonts/roboto-mono/roboto-mono-v4-latin-regular.eot'); /* IE9 Compat Modes */
-        src: local('Roboto Mono'), local('RobotoMono-Regular'),
-             url('/fonts/roboto-mono/roboto-mono-v4-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-             url('/fonts/roboto-mono/roboto-mono-v4-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-             url('/fonts/roboto-mono/roboto-mono-v4-latin-regular.woff') format('woff'), /* Modern Browsers */
-             url('/fonts/roboto-mono/roboto-mono-v4-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-             url('/fonts/roboto-mono/roboto-mono-v4-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
-      }
       body {
         margin: 0 20px;
         padding: 0;
@@ -25,7 +13,7 @@
         line-height: 24px;
         color: #999;
         background: #fff;
-        font-family: 'Roboto Mono', monospace;
+        font-family: Courier, monospace;
       }
       a:link, a:visited, a:active {
         color: #333;
