--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         line-height: 24px;
         color: #999;
         background: #fff;
-        font-family: Courier, monospace;
+        font-family: monospace;
       }
       a:link, a:visited, a:active {
         color: #333;
