--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       ul#lifestream li span { padding: 0 20px 0 0; }
     </style>
   </head>
-  <body onmousemove="party(event)">
+  <body>
     <div id="header">
       <div id="name">Ethan W. Brown&emsp;::&emsp;</div>
       <ul id="nav">
@@ -58,8 +58,8 @@
     </div>
     <div id="subtext">This past week I...</div>
     <ul id="lifestream"></ul>
-    <script src="/javascripts/party.min.js" type="text/javascript"></script>
-    <script src="/javascripts/timeago.min.js" type="text/javascript"></script>
-    <script src="/javascripts/lifestream.min.js" type="text/javascript"></script>
+    <script async src="/javascripts/party.min.js" type="text/javascript"></script>
+    <script async src="/javascripts/timeago.min.js" type="text/javascript"></script>
+    <script async src="/javascripts/lifestream.min.js" type="text/javascript"></script>
   </body>
 </html>
