--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         font-family: monospace;
       }
       a:link, a:visited, a:active {
-        color: #333;
+        color: rgb(248, 117, 114);
         text-decoration: none;
       }
       a:hover { text-decoration: underline; }
